[gd_scene load_steps=6 format=2]

[ext_resource path="res://MenuUI/MenuUI.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Images/980.png" type="Texture" id=2]
[ext_resource path="res://MenuUI/PrimaryButton.tres" type="StyleBox" id=3]
[ext_resource path="res://MenuUI/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://MenuUI/PrimaryButtonHover.tres" type="StyleBox" id=5]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel/MarginContainer"]
margin_right = 1820.0
margin_bottom = 980.0
custom_constants/separation = 50

[node name="Menu" type="VBoxContainer" parent="CanvasLayer/Panel/MarginContainer/HBoxContainer"]
margin_right = 790.0
margin_bottom = 980.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="CanvasLayer/Panel/MarginContainer/HBoxContainer/Menu"]
margin_top = 520.0
margin_right = 790.0
margin_bottom = 620.0
rect_min_size = Vector2( 0, 100 )
mouse_default_cursor_shape = 2
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="CanvasLayer/Panel/MarginContainer/HBoxContainer/Menu"]
margin_top = 640.0
margin_right = 790.0
margin_bottom = 740.0
rect_min_size = Vector2( 0, 100 )
mouse_default_cursor_shape = 2
text = "OPTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="CanvasLayer/Panel/MarginContainer/HBoxContainer/Menu"]
margin_top = 760.0
margin_right = 790.0
margin_bottom = 860.0
rect_min_size = Vector2( 0, 100 )
mouse_default_cursor_shape = 2
text = "CREDITS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="CanvasLayer/Panel/MarginContainer/HBoxContainer/Menu"]
margin_top = 880.0
margin_right = 790.0
margin_bottom = 980.0
rect_min_size = Vector2( 0, 100 )
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="TextureRect" parent="CanvasLayer/Panel/MarginContainer/HBoxContainer"]
margin_left = 840.0
margin_right = 1820.0
margin_bottom = 980.0
rect_min_size = Vector2( 980, 980 )
texture = ExtResource( 2 )
expand = true

[connection signal="pressed" from="CanvasLayer/Panel/MarginContainer/HBoxContainer/Menu/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/MarginContainer/HBoxContainer/Menu/OptionsButton" to="." method="_on_OptionsButton_pressed"]
